--- a/src/app/funcionario/consfuncionario/consfuncionario.component.html
+++ b/src/app/funcionario/consfuncionario/consfuncionario.component.html
@@ -17,7 +17,7 @@
                           <input type="text" class="form-control" id="pesquisanome" placeholder="Nome" formControlName="nome">
                         </div>
 
-                     
+
                         <div class="form-group col-md-2" >
                             <label for="funcao">Função</label>
                             <select class="form-control" formControlName="funcao"  [compareWith]="compararFuncao" (change)="setFuncao()">
@@ -50,7 +50,7 @@
                                       Limpar</button>
                               </div>
 
-                      
+
                   </div>
               </accordion-group>
           </accordion>
@@ -63,7 +63,7 @@
       </div>
       <table class="table table-striped" >
           <thead>
-              <tr 
+              <tr
               class="pb-0 card-body align-self-center d-flex flex-column flex-lg-row justify-content-between min-width-zero align-items-lg-center">
               <th class="col-lg-4 mb-1 text-muted text-small w-sm-100 hidden-lg hidden-md hidden-sm">Nome</th>
               <th class="col-lg-4 mb-1 text-muted text-small w-sm-100 hidden-lg hidden-md hidden-xs">Nome - Data Admissão - Função</th>
@@ -73,10 +73,10 @@
               <th class="col-lg-1 mb-1 text-muted text-small w-sm-100 hidden-xs hidden-sm">CBO</th>
               <th class="col-lg-2 mb-1 text-muted text-small w-sm-100 hidden-xs hidden-sm">Loja</th>
               <th class="col-lg-1 mb-1 text-muted text-small w-sm-100 hidden-xs hidden-sm">Situação</th>
-              </tr>  
+              </tr>
           </thead>
           <tbody>
-              <tr *ngFor="let funcionario of funcionario" 
+              <tr *ngFor="let funcionario of funcionario"
                 class="pb-0 card-body align-self-center d-flex flex-column flex-lg-row justify-content-between min-width-zero align-items-lg-center">
                 <td class="col-lg-3 col-xs mb-1 text-muted text-small w-sm-100">{{ funcionario.nome}}</td>
                 <td class="col-lg-2 col-xs mb-1 text-muted text-small w-sm-100">{{ funcionario.dataadmissao | date: 'dd/MM/yyyy' }}</td>
@@ -84,6 +84,19 @@
                 <td class="col-lg-1 col-xs mb-1 text-muted text-small w-sm-100">{{ funcionario.funcao.cbo }}</td>
                 <td class="col-lg-2 col-xs mb-1 text-muted text-small w-sm-100">{{ funcionario.loja.nome }}</td>
                 <td class="col-lg-1 col-xs mb-1 text-muted text-small w-sm-100 hidden-xs">{{ funcionario.situacao }}</td>
+
+                <td td class="col-lg-1 col-xs mb-1 text-muted text-small w-sm-100 hidden-xs">
+                  <button (click)="editar( funcionario )" class="btn btn-success" data-toggle="tooltip" data-placement="right" title="Tooltip on right" >
+                    <i class="fa  fa-pencil"></i>
+                  </button>
+                </td>
+                <td td class="col-lg-1 col-xs mb-1 text-muted text-small w-sm-100 hidden-xs">
+                    <div *ngIf="habilitarConsulta">
+                        <button  class="btn btn-info" (click)="selecionarFuncionario(f)" data-toggle="tooltip" data-placement="right" title="Tooltip on right">
+                          <i class="glyphicon glyphicon-ok"></i>
+                        </button>
+                      </div>
+                </td>
               </tr>
           </tbody>
       </table>
@@ -96,5 +109,4 @@
 
 
 
-  
-  
+
