--- a/src/app/asos/cadasocontrole/cadasocontrole.component.html
+++ b/src/app/asos/cadasocontrole/cadasocontrole.component.html
@@ -21,7 +21,7 @@
 
         <div class="form-group col-md-1" >
           <br/>
-          <button type="button" class="btn btn-info"  routerLink="/consfuncionario" style="margin-top: 10%" >
+          <button type="button" class="btn btn-info"  (click)="consultaFuncionario()" style="margin-top: 10%" >
               <i class="fa fa-search" aria-hidden="true"></i>
           </button>
         </div>
