--- a/src/app/funcionario/consfuncionario/consfuncionario.component.html
+++ b/src/app/funcionario/consfuncionario/consfuncionario.component.html
@@ -1,107 +1,126 @@
-<br/><br/>
+<br /><br />
 <div class="page-header">
   <div class="container-fluid">
     <h3>
       Consulta de Funcionário
-      <br/>
+      <br />
     </h3>
   </div>
   <form [formGroup]="formulario">
     <div class="container-fluid" style="width:100%;">
       <div class="w-100">
-          <accordion [closeOthers]="oneAtATime">
-              <accordion-group heading="Pesquisar" [isOpen]="isFirstOpen">
-                  <div class="row">
-                      <div class="form-group col-md-3" >
-                          <label for="pesquisanome">Nome</label>
-                          <input type="text" class="form-control" id="pesquisanome" placeholder="Nome" formControlName="nome">
-                        </div>
+        <accordion [closeOthers]="oneAtATime">
+          <accordion-group heading="Pesquisar" [isOpen]="isFirstOpen">
+            <div class="row">
+              <div class="form-group col-md-3">
+                <label for="pesquisanome">Nome</label>
+                <input type="text" class="form-control" id="pesquisanome" placeholder="Nome" formControlName="nome">
+              </div>
 
 
-                        <div class="form-group col-md-2" >
-                            <label for="funcao">Função</label>
-                            <select class="form-control" formControlName="funcao"  [compareWith]="compararFuncao" (change)="setFuncao()">
-                                <option *ngFor="let funcao of funcoes" [ngValue]="funcao"> {{ funcao.nome }}</option>
-                             </select>
-                          </div>
-                          <div class="form-group col-md-2" >
-                              <label for="loja">Loja</label>
-                              <select class="form-control" formControlName="loja"  [compareWith]="compararLoja" (change)="setLoja()" >
-                                  <option *ngFor="let loja of lojas" [ngValue]="loja"> {{ loja.nome }}</option>
-                               </select>
-                            </div>
-                            <div class="form-group col-md-2" >
-                                <label for="situacao">Situação</label>
-                                <select class="form-control" formControlName="situacao">
-                                    <option value="Ativos">Ativo</option>
-                                    <option value="Afastado">Afastado</option>
-                                    <option value="Inativo">Inativo</option>
-                                  </select>
-                              </div>
+              <div class="form-group col-md-2">
+                <label for="funcao">Função</label>
+                <select class="form-control" formControlName="funcao" [compareWith]="compararFuncao"
+                  (change)="setFuncao()">
+                  <option *ngFor="let funcao of funcoes" [ngValue]="funcao"> {{ funcao.nome }}</option>
+                </select>
+              </div>
+              <div class="form-group col-md-2">
+                <label for="loja">Loja</label>
+                <select class="form-control" formControlName="loja" [compareWith]="compararLoja" (change)="setLoja()">
+                  <option *ngFor="let loja of lojas" [ngValue]="loja"> {{ loja.nome }}</option>
+                </select>
+              </div>
+              <div class="form-group col-md-2">
+                <label for="situacao">Situação</label>
+                <select class="form-control" formControlName="situacao">
+                  <option value="Ativos">Ativo</option>
+                  <option value="Afastado">Afastado</option>
+                  <option value="Inativo">Inativo</option>
+                </select>
+              </div>
 
-                              <div class="form-group col-xs-2" >
-                                  <label ></label>
-                                  <br/><br/>
-                                <button type="button"  class="btn btn-success" (click)="pesquisar()" id="pesquisar">
-                                  <i class="fa fa-search" aria-hidden="true"></i>
-                                  Pesquisar</button>
-                                  <button type="button" style="margin-left:3%;" class="btn btn-success" (click)="pesquisarLimpar()" title="Limpar a pesquisa">
-                                      <i class="fa fa-ban" aria-hidden="true" ></i>
-                                      Limpar</button>
-                              </div>
+              <div class="form-group col-xs-2">
+                <label></label>
+                <br /><br />
+                <button type="button" class="btn btn-success" (click)="pesquisar()" id="pesquisar">
+                  <i class="fa fa-search" aria-hidden="true"></i>
+                  Pesquisar</button>
+                <button type="button" style="margin-left:3%;" class="btn btn-success" (click)="pesquisarLimpar()"
+                  title="Limpar a pesquisa">
+                  <i class="fa fa-ban" aria-hidden="true"></i>
+                  Limpar</button>
+              </div>
 
 
-                  </div>
-              </accordion-group>
-          </accordion>
+            </div>
+          </accordion-group>
+        </accordion>
       </div>
       <div class="w-100">
-          <button type="button" style="float:right;" class="btn btn-success" routerLink="/cadfuncionario">
-            <i class="fa fa-plus" aria-hidden="true"></i>
-            Novo
-          </button>
+        <button type="button" style="float:right;" class="btn btn-success" routerLink="/cadfuncionario">
+          <i class="fa fa-plus" aria-hidden="true"></i>
+          Novo
+        </button>
       </div>
-      <table class="table table-striped" >
-          <thead>
-              <tr
-              class="pb-0 card-body align-self-center d-flex flex-column flex-lg-row justify-content-between min-width-zero align-items-lg-center">
-              <th class="col-lg-4 mb-1 text-muted text-small w-sm-100 hidden-lg hidden-md hidden-sm">Nome</th>
-              <th class="col-lg-4 mb-1 text-muted text-small w-sm-100 hidden-lg hidden-md hidden-xs">Nome - Data Admissão - Função</th>
-              <th class="col-lg-2 mb-1 text-muted text-small w-sm-100 hidden-xs hidden-sm">Nome</th>
-              <th class="col-lg-2 mb-1 text-muted text-small w-sm-100 hidden-xs hidden-sm">Data Admissão</th>
-              <th class="col-lg-3 mb-1 text-muted text-small w-sm-100 hidden-xs hidden-sm">Função</th>
-              <th class="col-lg-1 mb-1 text-muted text-small w-sm-100 hidden-xs hidden-sm">CBO</th>
-              <th class="col-lg-2 mb-1 text-muted text-small w-sm-100 hidden-xs hidden-sm">Loja</th>
-              <th class="col-lg-1 mb-1 text-muted text-small w-sm-100 hidden-xs hidden-sm">Situação</th>
-              <th class="col-lg-1 mb-1 text-muted text-small w-sm-100 hidden-xs hidden-sm"></th>
+      <table class="table table-striped">
+        <thead>
+          <tr
+            class="pb-0 card-body align-self-center d-flex flex-column flex-lg-row justify-content-between min-width-zero align-items-lg-center">
+            <th class="col-lg-4 mb-1 text-muted text-small w-sm-100 hidden-lg hidden-md hidden-sm">Nome</th>
+            <th class="col-lg-4 mb-1 text-muted text-small w-sm-100 hidden-lg hidden-md hidden-xs">Nome - Admissão
+              - Função</th>
+            <th class="col-lg-2 mb-1 text-muted text-small w-sm-100 hidden-xs hidden-sm">Nome</th>
+            <th class="col-lg-2 mb-1 text-muted text-small w-sm-100 hidden-xs hidden-sm">Admissão</th>
+            <th class="col-lg-3 mb-1 text-muted text-small w-sm-100 hidden-xs hidden-sm">Função</th>
+            <th class="col-lg-1 mb-1 text-muted text-small w-sm-100 hidden-xs hidden-sm">CBO</th>
+            <th class="col-lg-2 mb-1 text-muted text-small w-sm-100 hidden-xs hidden-sm">Loja</th>
+            <th class="col-lg-1 mb-1 text-muted text-small w-sm-100 hidden-xs hidden-sm">Sit.</th>
+            <th class="col-lg-1 mb-1 text-muted text-small w-sm-100 hidden-xs hidden-sm">Ações</th>
 
 
-              </tr>
-          </thead>
-          <tbody>
-              <tr *ngFor="let funcionario of funcionario"
-                class="pb-0 card-body align-self-center d-flex flex-column flex-lg-row justify-content-between min-width-zero align-items-lg-center">
-                <td class="col-lg-2 col-xs mb-1 text-muted text-small w-sm-100">{{ funcionario.nome}}</td>
-                <td class="col-lg-2 col-xs mb-1 text-muted text-small w-sm-100">{{ funcionario.dataadmissao | date: 'dd/MM/yyyy' }}</td>
-                <td class="col-lg-3 col-xs mb-1 text-muted text-small w-sm-100">{{ funcionario.funcao.nome }}</td>
-                <td class="col-lg-1 col-xs mb-1 text-muted text-small w-sm-100">{{ funcionario.funcao.cbo }}</td>
-                <td class="col-lg-2 col-xs mb-1 text-muted text-small w-sm-100">{{ funcionario.loja.nome }}</td>
-                <td class="col-lg-1 col-xs mb-1 text-muted text-small w-sm-100 hidden-xs">{{ funcionario.situacao }}</td>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let funcionario of funcionario"
+            class="pb-0 card-body align-self-center d-flex flex-column flex-lg-row justify-content-between min-width-zero align-items-lg-center">
+            <td class="col-lg-2 col-xs mb-1 text-muted text-small w-sm-100">{{ funcionario.nome}}</td>
+            <td class="col-lg-2 col-xs mb-1 text-muted text-small w-sm-100">
+              {{ funcionario.dataadmissao | date: 'dd/MM/yyyy' }}</td>
+            <td class="col-lg-3 col-xs mb-1 text-muted text-small w-sm-100">{{ funcionario.funcao.nome }}</td>
+            <td class="col-lg-1 col-xs mb-1 text-muted text-small w-sm-100">{{ funcionario.funcao.cbo }}</td>
+            <td class="col-lg-2 col-xs mb-1 text-muted text-small w-sm-100">{{ funcionario.loja.nome }}</td>
+            <td class="col-lg-1 col-xs mb-1 text-muted text-small w-sm-100 hidden-xs">{{ funcionario.situacao }}</td>
+
+            <td class="col-lg-1 col-xs mb-1 text-muted text-small w-sm-100">
+              <button (click)="editar( funcionario )" class="btn btn-success hidden-xs hidden-sm"
+                style="margin-top: -9px;float: right">
+                <i class="fa  fa-pencil"></i>
+              </button>
+              <button (click)="editar( funcionario )" class="btn btn-success hidden-lg hidden-md" style="float: right">
+                <i class="fa  fa-pencil"></i>
+              </button>
+              
+              <div *ngIf="habilitarConsulta">
+
+                <button (click)="selecionarFuncionario( funcionario )" class="btn btn-success hidden-xs hidden-sm"
+                  style="margin-top: -9px;float: right">
+                  <i class="glyphicon glyphicon-ok"></i>
+                </button>
+                <button (click)="selecionarFuncionario( funcionario )" class="btn btn-success hidden-lg hidden-md"
+                  style="float: right">
+                  <i class="glyphicon glyphicon-ok"></i>
+                </button>
 
 
-                  <div *ngIf="habilitarConsulta">
-                    <td>
-                      <button  class="btn btn-info" (click)="selecionarFuncionario( funcionario )" data-toggle="tooltip" data-placement="right" title="Tooltip on right">
-                        <i class="glyphicon glyphicon-ok"></i>
-                      </button>
-
-                    </td>
-                  </div>
+              </div>
+            </td>
 
 
 
-              </tr>
-          </tbody>
+
+          </tr>
+        </tbody>
       </table>
 
 
@@ -109,7 +128,3 @@
     </div>
   </form>
 </div>
-
-
-
-
