--- a/src/app/funcionario/cadfuncionario/cadfuncionario.component.html
+++ b/src/app/funcionario/cadfuncionario/cadfuncionario.component.html
@@ -15,25 +15,33 @@
 
   <form [formGroup]="formulario">
   <div class="row">
-      <div class="form-group col-md-6" col-sm-12 >
+      <div class="form-group col-md-6 col-sm-12" [ngClass]="aplicaCssErro('nome')" >
           <label for="nome">Nome</label>
           <input type="text" class="form-control" id="nome" placeholder="Nome"
             formControlName="nome">
+            <app-campo-control-erro
+              [mostrarErro]="verificarValidTouched('nome')"
+              msgErro="Nome é obrigatório.">
+            </app-campo-control-erro>
         </div>
 
-      <div class="form-group col-md-3" col-sm-12>
+      <div class="form-group col-md-3 col-sm-12">
           <label for="datanascimento">Data Nascimento</label>
           <input type="date" class="form-control" id="datanascimento" placeholder="Data Nascimento"
             formControlName="datanascimento" >
         </div>
 
-        <div class="form-group col-md-3" col-sm-12>
+        <div class="form-group col-md-3 col-sm-12" [ngClass]="aplicaCssErro('cpf')">
           <label for="cpf">CPF</label>
-          <input type="text" class="form-control" id="cpf" placeholder="CPF" [textMask]="{mask: maskCPF}" placeholder="000.000.000-00"
-            formControlName="cpf">
+          <input type="text" class="form-control" id="cpf" placeholder="CPF" [textMask]="{mask: maskCPF}" placeholder="000.000.000-00"  
+          (blur)="consultarCPF()" formControlName="cpf">
+            <app-campo-control-erro
+              [mostrarErro]="verificarValidTouched('cpf')"
+              msgErro="CPF é obrigatório ou CPF Inválido.">
+            </app-campo-control-erro>
         </div>
 
-        <div class="form-group col-md-3" col-sm-12>
+        <div class="form-group col-md-3 col-sm-12">
           <label for="rg">RG</label>
           <input type="text" class="form-control" id="rg" placeholder="RG"
             formControlName="rg">
@@ -71,19 +79,19 @@
           </select>
         </div>
 
-        <div class="form-group col-md-3" col-sm-12>
+        <div class="form-group col-md-3 col-sm-12" >
           <label for="pis">PIS</label>
           <input type="text" class="form-control" id="pis" placeholder="PIS" [textMask]="{mask: maskPIS}" placeholder="000.00000.00.0"
             formControlName="pis">
         </div>
 
-        <div class="form-group col-md-2" col-sm-12>
+        <div class="form-group col-md-2 col-sm-12" >
           <label for="ctps">CTPS</label>
           <input type="text" class="form-control" id="ctps" placeholder="CTPS"
             formControlName="ctps">
         </div>
 
-        <div class="form-group col-md-2" col-sm-12>
+        <div class="form-group col-md-2 col-sm-12" >
           <label for="serie">Serie</label>
           <input type="text" class="form-control" id="serie" placeholder="Serie"
             formControlName="serie">
@@ -91,19 +99,27 @@
 
 
 
-        <div class="form-group col-md-3" col-sm-12>
+        <div class="form-group col-md-3 col-sm-12" [ngClass]="aplicaCssErro('dataadmissao')">
           <label for="dataadmissao">Data Admissão</label>
           <input type="date" class="form-control" id="dataadmissao" placeholder="Data Admissao"
             formControlName="dataadmissao" >
+            <app-campo-control-erro
+            [mostrarErro]="verificarValidTouched('dataadmissao')"
+            msgErro="Data de admissão é obrigatório.">
+          </app-campo-control-erro>
         </div>
 
         
 
-        <div class="form-group col-md-4 col-sm-12">
+        <div class="form-group col-md-4 col-sm-12" [ngClass]="aplicaCssErro('funcao')">
             <label for="funcao">Função</label>
             <select class="form-control" formControlName="funcao"  [compareWith]="compararFuncao" (change)="setFuncao()">
                 <option *ngFor="let funcao of funcoes" [ngValue]="funcao"> {{ funcao.nome }}</option>
              </select>
+             <app-campo-control-erro
+             [mostrarErro]="verificarValidTouched('funcao')"
+             msgErro="Função é obrigatória.">
+           </app-campo-control-erro>
         </div>
 
         <div class="form-group col-md-2 col-sm-12" >
@@ -112,27 +128,39 @@
               [value]="funcaoSelecionada.cbo">
         </div>
 
-        <div class="form-group col-md-3 col-sm-12">
+        <div class="form-group col-md-3 col-sm-12" [ngClass]="aplicaCssErro('setor')">
           <label for="setor">Setor</label>
           <select class="form-control" formControlName="setor"  [compareWith]="compararSetor" (change)="setSetor()">
               <option *ngFor="let setor of setores" [ngValue]="setor"> {{ setor.nome }}</option>
            </select>
+           <app-campo-control-erro
+           [mostrarErro]="verificarValidTouched('setor')"
+           msgErro="Setor é obrigatório.">
+         </app-campo-control-erro>
       </div>
 
-        <div class="form-group col-md-8 col-sm-12">
+        <div class="form-group col-md-8 col-sm-12" [ngClass]="aplicaCssErro('loja')">
             <label for="loja">Loja</label>
             <select class="form-control" formControlName="loja"  [compareWith]="compararLoja" (change)="setLoja()">
                 <option *ngFor="let loja of lojas" [ngValue]="loja"> {{ loja.nome }}</option>
              </select>
+             <app-campo-control-erro
+             [mostrarErro]="verificarValidTouched('loja')"
+             msgErro="Loja é obrigatório.">
+           </app-campo-control-erro>
         </div>
 
-        <div class="form-group col-md-4" col-sm-12>
+        <div class="form-group col-md-4 col-sm-12" [ngClass]="aplicaCssErro('situacao')">
           <label for="situacao">Situacao</label>
           <select class="form-control" formControlName="situacao">
               <option value="Ativo">Ativo</option>
               <option value="Afastado">Afastado</option>
               <option value="Inativo">Inativo</option>
           </select>
+          <app-campo-control-erro
+          [mostrarErro]="verificarValidTouched('situacao')"
+          msgErro="Situação é obrigatório.">
+        </app-campo-control-erro>
       </div>
 
        
@@ -144,7 +172,7 @@
 
 <br/>
 <div class="w-100 text-right">
-  <button type="submit" class="btn btn-primary" (click)="salvar()">
+  <button type="submit" class="btn btn-primary" (click)="salvar()" [disabled]="!formulario.valid">
     <i class="fa fa-floppy-o" aria-hidden="true"></i>
     Salvar
   </button>
