--- a/src/app/usuario/login/login/login.component.html
+++ b/src/app/usuario/login/login/login.component.html
@@ -1,2 +1,38 @@
-<h1>Login</h1>
-<button (click)="logar()">Logar</button>
+<br /><br />
+<div class="page-header">
+  <div class="container-fluid">
+    <h3>
+      Login
+    </h3>
+    <hr />
+  </div>
+  <div style="width: 100%;">
+    <form [formGroup]="formulario" >
+      <div class="row">
+        <div class="form-group col-md-4 col-sm-12">
+          <label for="login">Login</label>
+          <input type="text" class="form-control" id="login" placeholder="Login"
+            formControlName="login">
+        </div>
+        <div class="form-group col-md-4 col-sm-12">
+          <label for="senha">Senha</label>
+          <input type="password" class="form-control" id="senha" placeholder="Senha"
+          formControlName="senha">
+        </div>
+      </div>
+        
+      <br />
+      <div class="w-100 text-right">
+        <button type="button" class="btn btn-primary" (click)="logar()">
+          <i class="fa fa-floppy-o" aria-hidden="true"></i>
+          Entrar
+        </button>
+        <button type="submit" class="btn btn-danger" style="margin-left:1%;" (click)="sair()">
+          <i class="fa fa-times" aria-hidden="true"></i>
+          Sair
+        </button>
+      <br />
+    </div>
+    </form>
+  </div>
+</div>
